--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,5 +1,7 @@
 
 
+
+
 *{
     margin: 0;
     padding: 0;
@@ -19,17 +21,57 @@ a{
 
 .container{
     width: 100%;
-    max-width: 1110px ;
+    padding: 0 15px;
+    max-width: 1140px ;
     margin: 0 auto;
 }
 
+
+.wrapper{
+    position: relative;
+    overflow: hidden;
+    height: 100vh;
+}
 
 /* header */
 
 .nav{
     background: #3e8989;
-    padding: 37px 0;
+    padding: 37px 0px;
 }
+
+.toggle__menu-btn{
+    width: 25px;
+    height: 25px;
+    background: white;
+    z-index: 1002;
+   visibility: hidden;
+   opacity: 0;
+   transition: .5s;
+}
+
+.overlay{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background: rgb(0, 0, 0, .4);
+    z-index: 1000;
+    visibility: hidden;
+    opacity: 0;
+    transition: .5s;
+}
+
+input[type='checkbox'] {
+    display: none;
+}
+
+input[type='checkbox']:checked~.overlay {
+    visibility: visible;
+   
+}
+
 
 
 .nav__content{
@@ -42,11 +84,11 @@ a{
 .nav__list{
 display: flex;
 gap: 60px;
-
 }
 
 .search{
     display: flex;
+    gap: 5px;
 }
 
 .nav__list-link{
@@ -61,32 +103,31 @@ gap: 60px;
 }
 
 
-.nav__list input{
-    height: 25px;
-    border-radius: 10px 0px 0px 10px;
+.input__search{
+    height: 30px;
+    border-radius: 10px 10px 10px 10px;
    border: none;
    outline: none;
 }
 
 
 .nav__list input::placeholder{
-  
 font-weight: 400;
 font-size: 16px;
 color: #898989;
 }
 
 .nav__list-search{
-    border-radius: 0 20px 20px 0;
+    border-radius: 20px 20px 20px 20px;
     width: 70px;
-    height: 25px;
+    height: 30px;
     background: #295E5E;
     font-weight: 400;
     color: #fff;
     font-family: "Arial";
     border: none;
     outline: none;
-    padding: 4px 10px;
+    padding: 5px 10px;
 }
 
 .header__content{
@@ -129,7 +170,7 @@ color: #898989;
     font-weight: 600;
     font-size: 19px;
     color: #fff;
-   padding: 14px 77px ;
+   padding: 14px 77px;
    transition: 0.5s;
 }
 
